CSS aplicado nas páginas de curso e inicial; imagens adicionadas

--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang=pt-br" dir="ltr">
+<html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="../../../css/estilo.css">
     <title>::: JAVA :::</title>
   </head>
   <body>
@@ -16,6 +17,10 @@
           <li><a href="../python/curso-python.html">Python</li>
           <li><a href="../ruby/curso-ruby.html">Ruby</li>
         </ul>
+      </div>
+      <div>
+        <img src="../../../img/java.png" id="imgJava" alt="Curso de Java" title="java"/>
+        <p id="histCsharp">Este é um curso sobre Java</p>
       </div>
   </body>
 </html>
