--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang=pt-br" dir="ltr">
+<html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="../../../css/estilo.css">
     <title>::: RUBY :::</title>
   </head>
   <body>
@@ -16,6 +17,10 @@
           <li><a href="../python/curso-python.html">Python</li>
           <li><a href="../../../pagina-inicial.html">INÍCIO</li>
         </ul>
+      </div>
+      <div>
+        <img src="../../../img/ruby.jpg" id="imgRuby" alt="Curso de Ruby" title="ruby"/>
+        <p id="histPython">Este é um curso sobre Ruby</p>
       </div>
   </body>
 </html>
