--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
-<html lang=pt-br" dir="ltr">
+<html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"
     <title>::: INÍCIO :::</title>
+    <style>
+
+      #container {
+        background-color: #1f222b;
+        margin: 0 15% 0 15%;
+        font-style: "Times New Roman";
+        color: #ffffff;
+      }
+
+      a {
+        text-decoration: none;
+      }
+
+    </style>
   </head>
   <body>
     <div id="container">
