--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang=pt-br" dir="ltr">
+<html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="../../../css/estilo.css">
     <title>::: PYTHON :::</title>
   </head>
   <body>
@@ -16,6 +17,10 @@
           <li><a href="../../../pagina-inicial.html">INÍCIO</li>
           <li><a href="../ruby/curso-ruby.html">Ruby</li>
         </ul>
+      </div>
+      <div>
+        <img src="../../../img/python.png" id="imgPython" alt="Curso de Python" title="python"/>
+        <p id="histPython">Este é um curso sobre Python</p>
       </div>
   </body>
 </html>
