--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -14,10 +14,10 @@
         <h2>Lista de Cursos</h2>
         <ul>
 
-          <li>INICIO</li>
-          <li>C#</li>
-          <li>Java</li>
-          <li>Python</li>
+          <li><a href="../../../pagina-inicial.html"/a>Inicio</li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../java/curso-java.html">Java</a></li>
 
         </ul>
       </div>
