--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -15,7 +15,7 @@
           <ul>
 
             <li><a href="paginas/cursos/java/curso-java.html">Java</a></li>
-            <li><a href="paginas/cursos/csharp/curso-csharp.html">C#/a></li>
+            <li><a href="paginas/cursos/csharp/curso-csharp.html">C#</a></li>
             <li><a href="paginas/cursos/python/curso-python.html">Python</a></li>
             <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
 
