--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -14,10 +14,10 @@
           <h2>Lista de Cursos</h2>
           <ul>
 
-            <li><a href="paginas/PaginaInicial.html"/a>Inicio</li>
-            <li><a href="../paginas/cursos/Java/cursos-Java.html">Java</a></li>
-            <li><a href="paginas/cursos/Java/cursos-Python.html">Python</a></li>
-            <li><a href="paginas/cursos/Java/cursos-Ruby.html">Ruby</a></li>
+            <li><a href="../../../pagina-inicial.html"/a>Inicio</li>
+            <li><a href="../java/curso-java.html">Java</a></li>
+            <li><a href="../python/curso-python.html">Python</a></li>
+            <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
 
           </ul>
         </div>
