--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -14,10 +14,10 @@
           <h2>Lista de Cursos</h2>
           <ul>
 
-            <li>INICIO</li>
-            <li>C#</li>
-            <li>Python</li>
-            <li>Ruby</li>
+            <li><a href="../../../pagina-inicial.html"/a>Inicio</li>
+            <li><a href="../csharp/curso-csharp.html">C#</a></li>
+            <li><a href="../python/curso-python.html">Python</a></li>
+            <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
 
           </ul>
         </div>
