--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página :: INICIAL ::</h1>
+      <h1>Página :: NICIAL ::</h1>
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
