--- a/paginas/cursos/CSharp/curso-csharp.html
+++ b/paginas/cursos/CSharp/curso-csharp.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang='pt-br' dir="ltr">
   <head>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../../../css/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>.: C# :.</title>
+    <style>
+      #img_csharp{
+        width:30%;
+        height:30%;
+      }
+    </style>
   </head>
   <body>
     <div id="container">
-      <div>
+      <div id = 'menu'>
         <h2>Lista de Cursos</h2>
         <ul>
           <li><a  href='../../../pagina-inicial.html'>Inicial</a></li>
@@ -16,6 +22,12 @@
           <li><a  href='../Python/curso-python.html'>Python</a></li>
           <li><a  href='../Ruby/curso-ruby.html'>Ruby</a></li>
         </ul>
+        <div class="img">
+            <hr><img id ="img_csharp" src="../../../img/img_csharp.png" alt="Logo da linguagem C#">
+        </div>
+        <div id="histcsharp">
+          <p>C# é uma linguagem de programação, multiparadigma, de tipagem forte, desenvolvida pela Microsoft como parte da plataforma .NET. A sua sintaxe orientada a objetos foi baseada no C++ mas inclui muitas influências de outras linguagens de programação, como Object Pascal e, principalmente, Java.</p>
+        </div>
       </div>
     </div>
   </body>
