--- a/paginas/cursos/Ruby/curso-ruby.html
+++ b/paginas/cursos/Ruby/curso-ruby.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang='pt-br' dir="ltr">
   <head>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../../../css/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>.: Ruby :.</title>
+    <style>
+      #img_ruby{
+        width = 80%;
+        height = 80%;
+      }
+    </style>
   </head>
   <body>
     <div id="container">
-      <div>
+      <div id = 'menu'>
         <h2>Lista de Cursos</h2>
         <ul>
           <li><a  href='../../../pagina-inicial.html'>Inicial</a></li>
@@ -16,6 +22,12 @@
           <li><a  href='../CSharp/curso-csharp.html'>C#</a></li>
           <li><a  href='../Python/curso-python.html'>Python</a></li>
         </ul>
+      </div>
+      <div class="img">
+          <hr><img id = 'img_ruby' src="../../../img/img_ruby.png" alt="logo da lingauegm ruby">
+      </div>
+      <div id="histruby">
+        <p>Ruby é uma linguagem de programação interpretada multiparadigma, de tipagem dinâmica e forte, com gerenciamento de memória automático, originalmente planejada e desenvolvida no Japão em 1995, por Yukihiro "Matz" Matsumoto, para ser usada como linguagem de script.</p>
       </div>
     </div>
   </body>
