--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang='pt-br' dir="ltr">
   <head>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>.: INICIO :.</title>
+    <style>
+      #container{
+        background-color: #1f222b;
+        margin-left: 15%;
+        margin-right: 15%;
+        font-family: 'Times New Roman'
+        color = #ffffff
+      }
+      a{
+        text-decoration: none;
+        color: #ffffff;
+      }
+    </style>
   </head>
   <body>
     <div id="container">
