--- a/paginas/cursos/Java/curso-java.html
+++ b/paginas/cursos/Java/curso-java.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang='pt-br' dir="ltr">
   <head>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../../../css/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>.: JAVA :.</title>
+    <style>
+      #img_java{
+        width:25%;
+        height:25%;
+      }
+    </style>
   </head>
   <body>
     <div id="container">
-      <div>
+      <div id = 'menu'>
         <h2>Lista de Cursos</h2>
         <ul>
           <li><a  href='../../../pagina-inicial.html'>Inicial</a></li>
@@ -16,6 +22,12 @@
           <li><a  href='../Python/curso-python.html'>Python</a></li>
           <li><a  href='../Ruby/curso-ruby.html'>Ruby</a></li>
         </ul>
+      </div>
+      <div class="img">
+          <hr><img id = 'img_java' src="../../../img/img_java.png" alt="Logo da linguagem java">
+      </div>
+      <div id="histjava">
+        <p>Java é uma linguagem de programação orientada a objetos desenvolvida na década de 90 por uma equipe de programadores chefiada por James Gosling, na empresa Sun Microsystems.</p>
       </div>
     </div>
   </body>
