--- a/paginas/cursos/Python/curso-python.html
+++ b/paginas/cursos/Python/curso-python.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang='pt-br' dir="ltr">
   <head>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../../../css/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>.: Python :.</title>
+    <style>
+      #img_python{
+        width: 80%;
+        height: 80%;
+      }
+    </style>
   </head>
   <body>
     <div id="container">
-      <div>
+      <div id = 'menu'>
         <h2>Lista de Cursos</h2>
         <ul>
           <li><a  href='../../../pagina-inicial.html'>Inicial</a></li>
@@ -17,6 +23,12 @@
           <li><a  href='../Ruby/curso-ruby.html'>Ruby</a></li>
         </ul>
       </div>
+      <div class="img">
+          <hr><img id = 'img_python' src="../../../img/img_python.png" alt="logo da linguagem Python">
+      </div>
+    <div id="histpython">
+      <p> Python é uma linguagem de programação de alto nível, interpretada, de script, imperativa, orientada a objetos, funcional, de tipagem dinâmica e forte. Foi lançada por Guido van Rossum em 1991.</p>
+    </div>
     </div>
   </body>
 </html>
