inserção das imagens no projeto

--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -3,11 +3,28 @@
   <head>
     <meta charset="utf-8">
     <meta name= "viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="../../../estilo.css">
     <title>C#</title>
   </head>
   <body>
       <div id="container">
+        <div>
+          <h2>C#</h2>
+        <ul>
+          <li><a href="../../../pagina-inicial.html"> Inicio</a></li>
+          <li><a href="../java/curso-java.html"> Java</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html"> Ruby</a></li>
+        </ul>
+        </div>
 
+        <div>
+              <img id="imgcsharp" src="../../../imagens/csharp.png" alt="">
+        </div>
+        <div id="histcsharp">
+          <p>C# é uma linguagem de programação, multiparadigma, de tipagem forte, desenvolvida pela Microsoft como parte da plataforma .NET. A sua sintaxe orientada a objetos foi baseada no C++ mas inclui
+            muitas influências de outras linguagens de programação, como Object Pascal e, principalmente, Java.</p>
+        </div>
       </div>
   </body>
 </html>
