--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -3,11 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta name= "viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="../../../estilo.css">
     <title>Java</title>
   </head>
   <body>
       <div id="container">
+        <div>
+          <h2>JAVA</h2>
+        <ul>
+          <li><a href="../../../pagina-inicial.html"> Inicio</a></li>
+          <li><a href="../csharp/curso-csharp.html"> C#</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html"> Ruby</a></li>
+        </ul>
+        </div>
+        <div>
+          <img id="imgjava" src="../../../imagens/java.png" alt="">
 
+        </div>
       </div>
   </body>
 </html>
