--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta name= "viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="estilo.css">
     <title>Inicio</title>
+    <style>
+    #container{
+      background-color: #1f222b;
+      margin-left:15%;
+      margin-right:15%;
+      font-family:"Times New Roman";
+      color: #ffffff;
+    }
+    a{
+      text-decoration: none;
+    }
+    </style>
   </head>
   <body>
       <div id="container">
