--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -3,11 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta name= "viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="../../../estilo.css">
     <title>Ruby</title>
   </head>
   <body>
       <div id="container">
+        <div>
+          <h2>Ruby</h2>
+        <ul>
+          <li><a href="../../../pagina-inicial.html"> Inicio</a></li>
+          <li><a href="../csharp/curso-csharp.html"> C#</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../java/curso-java.html"> Java</a></li>
+        </ul>
 
+          <div>
+            <img id="imgruby" src="../../../imagens/rubi.png" alt="">
+
+          </div>
+        </div>
       </div>
   </body>
 </html>
