--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -1,11 +1,10 @@
-
-
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> :: INICIO</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div id="container">
@@ -13,7 +12,7 @@
     </div>
 
     <div >
-      <h2>lista de cursos</h2>
+      <h2>Lista de cursos</h2>
       <ul>
         <li> <a href="paginas/cursos/java/curso-java.html"> Java</a></li>
         <li> <a href="paginas/cursos/csharp/curso-csharp.html"> C# </a></li>
