--- a/paginas/cursos/Csharp/curso-csharp.html
+++ b/paginas/cursos/Csharp/curso-csharp.html
@@ -4,20 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> :: CSHARP</title>
+    <link rel="stylesheet" href="/css/style.css">
+
   </head>
   <body>
     <div id="container">
       <h1>Página :: CSHARP :: </h1>
     </div>
-
-    <div >
-      <h2> lista de cursos</h2>
-      <ul>
-        <li> Java</li>
-        <li> Inicio</li>
-        <li> Python</li>
-        <li> Ruby</li>
-      </ul>
+      <img src="/img/c-sharplogo.png">
+    <div>
+    
     </div>
   </body>
 </html>
