--- a/paginas/cursos/Java/curso-java.html
+++ b/paginas/cursos/Java/curso-java.html
@@ -4,19 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> :: JAVA</title>
+    <link rel="stylesheet" href="/css/style.css">
+
   </head>
   <body>
     <div id="container">
       <h1>Página :: JAVA :: </h1>
     </div>
+    <img src="/img/java.jpg">
 
     <div >
-      <h2> lista de cursos</h2>
-      <ul>
-        <li> inicio</li>
-        <li> C#</li>
-        <li> Python</li>
-        <li> Ruby</li>
+    
       </ul>
     </div>
   </body>
