--- a/paginas/cursos/Python/curso-python.html
+++ b/paginas/cursos/Python/curso-python.html
@@ -4,20 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> :: PYTHON</title>
+    <link rel="stylesheet" href="/css/style.css">
+
   </head>
   <body>
     <div id="container">
       <h1>Página :: PYTHON :: </h1>
     </div>
 
-    <div >
-      <h2> lista de cursos</h2>
-      <ul>
-        <li> Java</li>
-        <li> C#</li>
-        <li> inicio</li>
-        <li> Ruby</li>
-      </ul>
+    <div id="img-python">
+      <img src="/img/pythonlogo.png">
     </div>
   </body>
 </html>
