--- a/paginas/cursos/Ruby/curso-ruby.html
+++ b/paginas/cursos/Ruby/curso-ruby.html
@@ -4,20 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> :: RUBY</title>
+    <link rel="stylesheet" href="/css/style.css">
+
   </head>
   <body>
     <div id="container">
       <h1>Página :: RUBY :: </h1>
     </div>
 
-    <div >
-      <h2> lista de cursos</h2>
-      <ul>
-        <li> Java</li>
-        <li> C#</li>
-        <li> Python</li>
-        <li> inicio</li>
-      </ul>
+
+    <div class="foto">
+      
+      <img src="/img/rubylogo.jpg">
+
     </div>
   </body>
 </html>
