style init and imgs

--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <meta name="viwerport" content="width=device-width, initial-scale=1">
   <title>::Ruby::</title>
+  <link rel="stylesheet" href="../../../css/estilo.css">
 </head>
 <body>
-  <div id="Container">
+  <div id="container">
 
       <h1>Página :: Ruby ::</h1>
       <div >
