--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -4,9 +4,20 @@
     <meta charset="utf-8">
     <meta name="viwerport" content="width=device-width, initial-scale=1">
     <title>::INICIAL::</title>
+    <style>
+      #container {
+        background-color: #1f222b;
+        margin: 0% 15% 0% 15%;
+        font-family: Times New Roman;
+        color: #ffffff;
+      }
+      a {
+         text-decoration:none;
+      }
+    </style>
   </head>
   <body>
-    <div id="Container">
+    <div id="container">
 
         <h1>Página :: INICIAL ::</h1>
         <div>
@@ -20,7 +31,7 @@
             <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
 
           </ul>
-        </div>
+        </div> <!-- -->
 
     </div>
   </body>
