--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viwerport" content="width=device-width, initial-scale=1">
     <title>::Python::</title>
+    <link rel="stylesheet" href="../../../css/estilo.css">
   </head>
   <body>
-    <div id="Container">
+    <div id="container">
 
         <h1>Página :: Python ::</h1>
         <div >
