--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>:: Python ::</title>
+    <link rel="stylesheet" type="text/css" href="../../../style.css">
   </head>
   <body>
     <div id="container">
@@ -11,11 +12,17 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>C#</li>
-          <li>Inicio</li>
-          <li>Ruby</li>
+          <li><a href="../../../pagina-inicial.html">Inicio</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
+        <div>
+          <img id = "imgpython" src="../../../img/python/python.jpg" alt="">
+          <div>
+            <p id="dpython">Python é uma linguagem de programação de alto nível,[4] interpretada, de script, imperativa, orientada a objetos, funcional, de tipagem dinâmica e forte. Foi lançada por Guido van Rossum em 1991.[1] Atualmente possui um modelo de desenvolvimento comunitário, aberto e gerenciado pela organização sem fins lucrativos Python Software Foundation. Apesar de várias partes da linguagem possuírem padrões e especificações formais, a linguagem como um todo não é formalmente especificada. O padrão de facto é a implementação CPython.</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
