--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -1,9 +1,21 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>:: INICIO ::</title>
+    <style>
+    #container {
+      background-color: #1f222b;
+      margin-left: 15%;
+      margin-right: 15%;
+      font-family:times new roman, arial;
+      color: #ffffff
+    }
+    a {
+      text-decoration: none;
+    }
+    </style>
   </head>
   <body>
     <div id="container">
@@ -11,10 +23,10 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li><a href="/paginas/cursos/java/curso-java.html">Java</a></li>
-          <li><a href="/paginas/cursos/csharp/curso-csharp.html">C#</a></li>
-          <li><a href="/paginas/cursos/python/curso-python.html">Python</a></li>
-          <li><a href="/paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
+          <li><a href="paginas/cursos/java/curso-java.html">Java</a></li>
+          <li><a href="paginas/cursos/csharp/curso-csharp.html">C#</a></li>
+          <li><a href="paginas/cursos/python/curso-python.html">Python</a></li>
+          <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
     </div>
