--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -1,9 +1,10 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>:: C# ::</title>
+    <link rel="stylesheet" type="text/css" href="../../../style.css">
   </head>
   <body>
     <div id="container">
@@ -11,11 +12,17 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>Inicio</li>
-          <li>Python</li>
-          <li>Ruby</li>
+          <li><a href="../../../pagina-inicial.html">Inicio</a></li>
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
+        <div>
+          <img id="imgcsharp" src="../../../img/csharp/csharp.jpg" alt="">
+          <div>
+            <p id="dc#">C# é uma linguagem de programação, multiparadigma, de tipagem forte, desenvolvida pela Microsoft como parte da plataforma .NET. A sua sintaxe orientada a objetos foi baseada no C++ mas inclui muitas influências de outras linguagens de programação, como Object Pascal e, principalmente, Java. O código fonte é compilado para Common Intermediate Language (CIL) que é interpretado pela máquina virtual Common Language Runtime (CLR). C# é uma das linguagens projetadas para funcionar na Common Language Infrastructure da plataforma .NET Framework.</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
