--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>:: Ruby ::</title>
+    <link rel="stylesheet" type="text/css" href="../../../style.css">
   </head>
   <body>
     <div id="container">
@@ -11,11 +12,17 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>C#</li>
-          <li>Python</li>
-          <li>Inicio</li>
+          <li><a href="../../../pagina-inicial.html">Inicio</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
         </ul>
+        <div>
+          <img id="imgruby" src="../../../img/ruby/ruby.jpg" alt="">
+          <div>
+            <p id="druby">Ruby é uma linguagem de programação interpretada multiparadigma, de tipagem dinâmica e forte, com gerenciamento de memória automático, originalmente planejada e desenvolvida no Japão em 1995, por Yukihiro "Matz" Matsumoto, para ser usada como linguagem de script. Matz queria uma linguagem de script que fosse mais poderosa do que Perl, e mais orientada a objetos do que Python.[4] Ruby suporta programação funcional, orientada a objetos, imperativa e reflexiva. Foi inspirada principalmente por Python, Perl, Smalltalk, Eiffel, Ada e Lisp, sendo muito similar em vários aspectos a Python.[5] Ruby está entre as 10 linguagens mais populares, de acordo com uma pesquisa conduzida pela RedMonk.[6]</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
