--- a/Paginas/Cursos/Python/curso-python.html
+++ b/Paginas/Cursos/Python/curso-python.html
@@ -8,13 +8,14 @@
   <body>
     <div id="container">
       <h1>Página :: PYTHON ::</h1>
+      <img src="python_logo.png" width="40%">
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>C#</li>
-          <li>INICIO</li>
-          <li>Ruby</li>
+          <li><a href="../Java/curso-java.html">Java</a></li>
+          <li><a href="../Csharp/curso-csharp.html">CSHARP</a></li>
+          <li><a href="../Ruby/curso-ruby.html">Ruby</a></li>
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
         </ul>
       </div>
     </div>
