--- a/Paginas/Cursos/Csharp/curso-csharp.html
+++ b/Paginas/Cursos/Csharp/curso-csharp.html
@@ -8,13 +8,14 @@
   <body>
     <div id="container">
       <h1>Página :: CSHARP ::</h1>
-      <div>
+      <img src="C_Sharp_logo.png" width="40%">
+    <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>INICIO</li>
-          <li>Python</li>
-          <li>Ruby</li>
+          <li><a href="../Java/curso-java.html">Java</a></li>
+          <li><a href="../Python/curso-python.html">Python</a></li>
+          <li><a href="../Ruby/curso-ruby.html">Ruby</a></li>
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
         </ul>
       </div>
     </div>
