--- a/Paginas/Cursos/Java/curso-java.html
+++ b/Paginas/Cursos/Java/curso-java.html
@@ -8,13 +8,14 @@
   <body>
     <div id="container">
       <h1>Página :: JAVA ::</h1>
+      <img src="java-logo.jpg" alt="50%">
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>INICIO</li>
-          <li>C#</li>
-          <li>Python</li>
-          <li>Ruby</li>
+          <li><a href="../Csharp/curso-csharp.html">CSHARP</a></li>
+          <li><a href="../Python/curso-python.html">Python</a></li>
+          <li><a href="../Ruby/curso-ruby.html">Ruby</a></li>
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
         </ul>
       </div>
     </div>
