--- a/Paginas/Cursos/Ruby/curso-ruby.html
+++ b/Paginas/Cursos/Ruby/curso-ruby.html
@@ -8,13 +8,14 @@
   <body>
     <div id="container">
       <h1>Página :: RUBY ::</h1>
+      <img src="ruby_logo.png" width="40%">
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>C#</li>
-          <li>Python</li>
-          <li>INICIO</li>
+          <li><a href="../Java/curso-java.html">Java</a></li>
+          <li><a href="../Csharp/curso-csharp.html">CSHARP</a></li>
+          <li><a href="../Python/curso-python.html">Python</a></li>
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
         </ul>
       </div>
     </div>
