Alterações corretas, finalizadas

--- a/paginas/cursos/Python/curso-python.html
+++ b/paginas/cursos/Python/curso-python.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> :: PYTHON</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="/css/estilo.css">
+</head>
+
+<body>
     <div id="container">
-      <h1>Página :: PYTHON :: </h1>
+        <h1>Página :: PYTHON :: </h1>
     </div>
 
-    <div >
-      <h2> lista de cursos</h2>
-      <ul>
-        <li> Java</li>
-        <li> C#</li>
-        <li> inicio</li>
-        <li> Ruby</li>
-      </ul>
+    <div>
+        <h2> lista de cursos</h2>
+        <hr>
+        <ul>
+            <li> <a href="../Java/curso-java.html">Java</a></li>
+            <li> <a href="../Csharp/curso-csharp.html">C#</a></li>
+            <li> <a href="/pagina-inicial.html">inicio</a></li>
+            <li> <a href="../Ruby/curso-ruby.html">Ruby</a></li>
+        </ul>
     </div>
-  </body>
+
+    <img id="imgpython" src="/img/pythonlogo.png" alt="Logo da linguagem de programação Python">
+
+    <p>
+        <h3>História </h3>
+        Python é uma linguagem de programação de alto nível,[4] interpretada, de script, imperativa, orientada a objetos, funcional, de tipagem dinâmica e forte. Foi lançada por Guido van Rossum em 1991.[1] Atualmente possui um modelo de desenvolvimento comunitário,
+        aberto e gerenciado pela organização sem fins lucrativos Python Software Foundation. Apesar de várias partes da linguagem possuírem padrões e especificações formais, a linguagem como um todo não é formalmente especificada. O padrão de facto é
+        a implementação CPython.
+        <br>
+        <h3>Origim do nome</h3>
+        O nome Python teve a sua origem no grupo humorístico britânico Monty Python,[7] criador do programa Monty Python's Flying Circus, embora muitas pessoas façam associação com o réptil do mesmo nome (em português, píton ou pitão).
+    </p>
+</body>
+
 </html>
