--- a/paginas/cursos/Ruby/curso-ruby.html
+++ b/paginas/cursos/Ruby/curso-ruby.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> :: RUBY</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="/css/estilo.css">
+</head>
+
+<body>
     <div id="container">
-      <h1>Página :: RUBY :: </h1>
+        <h1>Página :: RUBY :: </h1>
     </div>
 
-    <div >
-      <h2> lista de cursos</h2>
-      <ul>
-        <li> Java</li>
-        <li> C#</li>
-        <li> Python</li>
-        <li> inicio</li>
-      </ul>
+    <div>
+        <h2> lista de cursos</h2>
+        <hr>
+        <ul>
+            <li> <a href="../Java/curso-java.html">Java</a></li>
+            <li> <a href="../Csharp/curso-csharp.html">C#</a></li>
+            <li> <a href="../Python/curso-python.html">Python</a></li>
+            <li> <a href="/pagina-inicial.html">inicio</a></li>
+        </ul>
     </div>
-  </body>
+
+
+    <img id="imgruby" src="/img/rubylogo.jpg" alt="Logo da linguagem de programação Ruby">
+
+    <p>
+        <h3>História da linguagem</h3>
+        Ruby é uma linguagem de programação interpretada multiparadigma, de tipagem dinâmica e forte, com gerenciamento de memória automático, originalmente planejada e desenvolvida no Japão em 1995, por Yukihiro "Matz" Matsumoto, para ser usada como linguagem
+        de script. Matz queria uma linguagem de script que fosse mais poderosa do que Perl, e mais orientada a objetos do que Python.[4] Ruby suporta programação funcional, orientada a objetos, imperativa e reflexiva. Foi inspirada principalmente por
+        Python, Perl, Smalltalk, Eiffel, Ada e Lisp, sendo muito similar em vários aspectos a Python.[5] Ruby está entre as 10 linguagens mais populares, de acordo com uma pesquisa conduzida pela RedMonk. A linguagem Ruby foi concebida em 24 de fevereiro
+        de 1993 por Yukihiro Matsumoto, que pretendia criar uma nova linguagem que balanceava programação funcional com a programação imperativa.[5] Matsumoto afirmou: "Eu queria uma linguagem de script que fosse mais poderosa do que Perl, e mais orientada
+        a objetos do que Python. É por isso que eu decidi desenvolver minha própria linguagem.".[4]. Por volta de 2005, o interesse pela linguagem Ruby subiu em conjunto com o Ruby on Rails, um framework de aplicações web popular escrito em Ruby. Rails
+        é frequentemente creditada como a aplicação que tornou Ruby "famosa" e a associação é tão forte que ambos são muitas vezes confundidos por programadores que são novos a Ruby.[13]
+    </p>
+</body>
+
 </html>
