--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -6,6 +6,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> :: INICIO</title>
+    <style>
+        #container {
+          font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+          background-color: #1f222b;
+          color: #ffffff;
+          margin: 15%;
+        }
+
+        a {
+          text-decoration: none;
+        }
+    </style>
   </head>
   <body>
     <div id="container">
@@ -16,9 +28,16 @@
       <h2>lista de cursos</h2>
       <ul>
         <li> <a href="paginas/cursos/java/curso-java.html"> Java</a></li>
+        <img src="/img/javalogo.png" alt="logo java.">
+
         <li> <a href="paginas/cursos/csharp/curso-csharp.html"> C# </a></li>
+        <img src="/img/c-sharplogo.png" alt="logo c-sharp.">
+
         <li> <a href="paginas/cursos/python/curso-python.html"> Python </a></li>
+        <img src="/img/pythonlogo.png" alt="logo Python.">
+
         <li> <a href="paginas/cursos/ruby/curso-ruby.html"> Ruby</a></li>
+        <img src="/img/rubylogo.jpg" alt="logo ruby.">
       </ul>
     </div>
   </body>
