--- a/paginas/cursos/Csharp/curso-csharp.html
+++ b/paginas/cursos/Csharp/curso-csharp.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title> :: CSHARP</title>
-  </head>
-  <body>
+    <title> :: C-SHARP</title>
+    <link rel="stylesheet" href="/css/estilo.css">
+</head>
+
+<body>
     <div id="container">
-      <h1>Página :: CSHARP :: </h1>
+        <h1>Página :: C-SHARP :: </h1>
     </div>
 
-    <div >
-      <h2> lista de cursos</h2>
-      <ul>
-        <li> Java</li>
-        <li> Inicio</li>
-        <li> Python</li>
-        <li> Ruby</li>
-      </ul>
+    <div>
+        <h1> lista de cursos</h1>
+        <hr>
+        <ul>
+            <li> <a href="../Java/curso-java.html">Java</a></li>
+            <li> <a href="/pagina-inicial.html">Inicio</a></li>
+            <li> <a href="../Python/curso-python.html">Python</a></li>
+            <li> <a href="../Ruby/curso-ruby.html">Ruby</a></li>
+        </ul>
     </div>
-  </body>
+
+    <img id="imgcsharp" src="/img/c-sharplogo.png" alt="Logo da linguagem de programação Csharp.">
+
+    <p id="txtc#">
+        <h3>História da linguagem</h3>
+        A linguagem C# foi criada junto com a arquitetura .NET. Embora existam várias outras linguagens que suportam essa tecnologia (como VB.NET, C++, J#), C# é considerada a linguagem símbolo do .NET pelas seguintes razões:
+        <br>
+        <h3>Criação do nome </h3>
+        Muitos pensam que o nome C# viria de uma sobreposição de 4 símbolos "+" dando a impressão de "++++". Na verdade o "#" de C# refere-se ao sinal musical (sustenido), que aumenta em 1/2 tom uma nota musical. O símbolo real seria o ♯ e não o #, porém, devido
+        a limitação de telas, fontes e alguns browsers, no momento da normalização junto a ECMA, fora especificado apenas que o nome da linguagem seria uma letra C maiúscula (U+0043) e o sinal "#" (U+0023), facilitando assim, publicações e artigos com
+        um caracter encontrado facilmente dos layouts de teclado padrões. Desta forma, caso o nome fosse usado em português, seria "C-Sustenido" (ou "Dó-Sustenido"), e não "C-cerquilha".
+    </p>
+</body>
+
 </html>
