--- a/paginas/cursos/Java/curso-java.html
+++ b/paginas/cursos/Java/curso-java.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> :: JAVA</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="/css/estilo.css">
+</head>
+
+<body>
     <div id="container">
-      <h1>Página :: JAVA :: </h1>
+        <h1>Página :: JAVA :: </h1>
     </div>
 
-    <div >
-      <h2> lista de cursos</h2>
-      <ul>
-        <li> inicio</li>
-        <li> C#</li>
-        <li> Python</li>
-        <li> Ruby</li>
-      </ul>
+    <div>
+        <h2> lista de cursos</h2>
+        <hr>
+        <ul>
+            <li> <a href="/pagina-inicial.html">inicio</a></li>
+            <li> <a href="../Csharp/curso-csharp.html">C#</a></li>
+            <li> <a href="../Python/curso-python.html">Python</a></li>
+            <li> <a href="../Ruby/curso-ruby.html">Ruby</a></li>
+        </ul>
     </div>
-  </body>
+
+    <img id="imgjava" src="/img/javalogo.png" alt="Logo da linguagem de programação Java">
+
+    <p>
+        <h3>História da linguagem</h3>
+        Java é uma linguagem de programação orientada a objetos desenvolvida na década de 90 por uma equipe de programadores chefiada por James Gosling, na empresa Sun Microsystems. Em 2008 o Java foi adquirido pela empresa Oracle Corporation. Diferente das linguagens
+        de programação modernas, que são compiladas para código nativo, a linguagem Java é compilada para um bytecode que é interpretado por uma máquina virtual (Java Virtual Machine, mais conhecida pela sua abreviação JVM). A linguagem de programação
+        Java é a linguagem convencional da Plataforma Java, mas não é a sua única linguagem. J2ME Para programas e jogos de computador, celular, calculadoras, ou até mesmo o rádio do carro.
+    </p>
+</body>
+
 </html>
