--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -31,7 +31,7 @@
             <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
 
           </ul>
-        </div> <!-- -->
+        </div> <!-- login github -->
 
     </div>
   </body>
