--- a/paginas/cursos/Csharp/curso-csharp.html
+++ b/paginas/cursos/Csharp/curso-csharp.html
@@ -11,7 +11,7 @@
     <div id="container">
       <h1>Página :: CSHARP :: </h1>
     </div>
-      <img src="/img/c-sharplogo.png">
+      <img src="/img/c-sharplogo.png" id="img-csharp">
     <div>
     
     </div>
