--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>:: RUBY ::</title>
+    <title>:: RUBY ::</title>]
+    <link rel="stylesheet" href="../../../css/estilo.css">
   </head>
   <body>
     <div id="container">
@@ -18,5 +19,11 @@
         </ul>
       </div>
     </div>
+
+    <div>
+
+    </div>
+
+    
   </body>
 </html>
