--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -4,6 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>:: INICIO ::</title>
+
+      <style type="text/css">
+
+
+      #container{ background-color: #1f222b;
+
+            margin-left: 15%;
+            margin-right: 15%;
+            font-family: "Times New Roman";
+            color: #ffffff;
+      }
+
+      a{ text-decoration: none;
+
+
+      }
+      </style>
+
   </head>
   <body>
     <div id="container">
