--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>:: PYTHON ::</title>
+
+    <link rel="stylesheet" href="../../../css/estilo.css">
   </head>
   <body>
     <div id="container">
@@ -18,5 +20,10 @@
         </ul>
       </div>
     </div>
+
+      <div>
+
+      </div>
+
   </body>
 </html>
