Foi adicionada uma pasta CSS e um file JavaCss

--- a/paginas/cursos/Csharp/curso-Csharp.html
+++ b/paginas/cursos/Csharp/curso-Csharp.html
@@ -14,10 +14,10 @@
           <h2>Lista de Cursos</h2>
           <ul>
 
-            <li><a href="paginas/PaginaInicial.html"/a>Inicio</li>
-            <li><a href="../paginas/cursos/Java/cursos-Java.html">Java</a></li>
-            <li><a href="paginas/cursos/Java/cursos-Python.html">Python</a></li>
-            <li><a href="paginas/cursos/Java/cursos-Ruby.html">Ruby</a></li>
+            <li><a href="../../../paginas/PaginaInicial.html">Inicio</a></li>
+            <li><a href="../../cursos/Java/curso-Java.html">Java</a></li>
+            <li><a href="../../cursos/Python/curso-Python.html">Python</a></li>
+            <li><a href="../../cursos/Ruby/curso-Ruby.html">Ruby</a></li>
 
           </ul>
         </div>
