--- a/paginas/cursos/Ruby/curso-Ruby.html
+++ b/paginas/cursos/Ruby/curso-Ruby.html
@@ -14,10 +14,10 @@
           <h2>Lista de Cursos</h2>
           <ul>
 
-            <li>INICIO</li>
-            <li>C#</li>
-            <li>Java</li>
-            <li>Python</li>
+            <li><a href="../../../paginas/PaginaInicial.html">Inicio</a></li>
+            <li><a href="../../cursos/Csharp/curso-Csharp.html">C#</a></li>
+            <li><a href="../../cursos/Java/curso-Java.html">Java</a></li>
+            <li><a href="../../cursos/Python/curso-Python.html">Python</a></li>
 
           </ul>
         </div>
