--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -13,10 +13,10 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li><a href="paginas/cursos/java/curso-java.html">Java</li>
-          <li><a href="paginas/cursos/Csharp/curso-Csharp.html">C#</li>
-          <li><a href="paginas/cursos/Python/curso-Python.html">Python</li>
-          <li><a href="paginas/cursos/Ruby/curso-Ruby.html">Ruby</li>
+          <li><a href="paginas/cursos/java/curso-java.html">Java</a></li>
+          <li><a href="paginas/cursos/Csharp/curso-Csharp.html">C#</a></li>
+          <li><a href="paginas/cursos/Python/curso-Python.html">Python</a></li>
+          <li><a href="paginas/cursos/Ruby/curso-Ruby.html">Ruby</a></li>
         </ul>
       </div>
 
