--- a/paginas/cursos/Python/curso-Python.html
+++ b/paginas/cursos/Python/curso-Python.html
@@ -13,10 +13,10 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>C#</li>
-          <li>INICIO</li>
-          <li>Ruby</li>
+					<li><a href="../Java/curso-java.html">Java</a></li>
+					<li><a href="../Csharp/curso-Csharp.html">C#</a></li>
+					<li><a href="../../../pagina-inicial.html">Inicio</a></li>
+					<li><a href="../Ruby/curso-Ruby.html">Ruby</a></li>
         </ul>
       </div>
 
