--- a/paginas/cursos/Csharp/curso-Csharp.html
+++ b/paginas/cursos/Csharp/curso-Csharp.html
@@ -13,10 +13,10 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>INICIO</li>
-          <li>Python</li>
-          <li>Ruby</li>
+					<li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../../../pagina-inicial.html">Inicio</a></li>
+          <li><a href="../Python/curso-Python.html">Python</a></li>
+          <li><a href="../Ruby/curso-Ruby.html">Ruby</a></li>
         </ul>
       </div>
 
