--- a/paginas/cursos/Java/curso-Java.html
+++ b/paginas/cursos/Java/curso-Java.html
@@ -9,14 +9,14 @@
 
 	<body>
 		<div id="container">
-      <h1>Página :: jAVA ::</h1>
+      <h1>Página :: Java ::</h1>
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>INICIO</li>
-          <li>C#</li>
-          <li>Python</li>
-          <li>Ruby</li>
+					<li><a href="../../../pagina-inicial.html">Inicio</a></li>
+          <li><a href="../Csharp/curso-Csharp.html">C#</a></li>
+          <li><a href="../Python/curso-Python.html">Python</a></li>
+          <li><a href="../Ruby/curso-Ruby.html">Ruby</a></li>
         </ul>
       </div>
 
