--- a/paginas/cursos/Ruby/curso-Ruby.html
+++ b/paginas/cursos/Ruby/curso-Ruby.html
@@ -13,10 +13,10 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>C#</li>
-          <li>Python</li>
-          <li>INICIO</li>
+					<li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../Csharp/curso-Csharp.html">C#</a></li>
+          <li><a href="../Python/curso-Python.html">Python</a></li>
+          <li><a href="../../../pagina-inicial.html">Inicio</a></li>
         </ul>
       </div>
 
