--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>C#</title>
+    <link rel="stylesheet" href="../../../css/estilo.css">
   </head>
   <body>
     <div id="container">
@@ -17,6 +18,9 @@
           <li><a href="../ruby/curso-ruby.html" target="_blank">Ruby</li>
         </ul>
       </div>
+        <div>
+          <img src="../../../img/csharp.jpg" alt="Imagem de demonstração do slogan do C#" id="imgC#">
+        </div>
     </div>
   </body>
 </html>
