--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -4,18 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Java</title>
+    <link rel="stylesheet" href="../../../css/estilo.css">
   </head>
   <body>
     <div id="container">
-      <h1>PáginaJava</h1>
+      <h1>Página Java</h1>
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Início</li>
-          <li>C#</li>
-          <li>Python</li>
-          <li>Ruby</li>
+          <li><a href="../../../pagina-inicial.html" target="_blank">Início</a></li>
+          <li><a href="../csharp/curso-csharp.html" target="_blank">C#</a></li>
+          <li><a href="../python/curso-python.html" target="_blank">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html" target="_blank">Ruby</a></li>
         </ul>
+      </div>
+      <div>
+        <img src="../../../img/java.jpeg" alt="Imagem de demonstração do slogan do Java" id="imgJava">
       </div>
     </div>
   </body>
