--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Python</title>
+    <link rel="stylesheet" href="../../../css/estilo.css">
   </head>
   <body>
     <div id="container">
@@ -11,11 +12,14 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>C#</li>
-          <li>Início</li>
-          <li>Ruby</li>
+          <li><a href="../java/curso-java.html" target="_blank">Java</a></li>
+          <li><a href="../csharp/curso-csharp.html" target="_blank">C#</a></li>
+          <li><a href="../../../pagina-inicial.html" target="_blank">Início</a></li>
+          <li><a href="../ruby/curso-ruby.html" target="_blank">Ruby</a></li>
         </ul>
+      </div>
+      <div>
+        <img src="../../../img/python.png" alt="Imagem de demonstração do slogan do Python" id="imgPython">
       </div>
     </div>
   </body>
