--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -4,7 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>:: Início ::</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <style>
+  #container {
+      background-color: #1f222b;
+      margin-left: 15%;
+      margin-right: 15%;
+      font-family: "Times New Roman";
+      text-decoration-color: #ffffff;
+     }
+         a{
+         text-decoration: none;
+       }
+  </style>
   </head>
   <body>
     <div id="container">
@@ -12,10 +23,10 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li><a href="paginas/cursos/java/curso-java.html" target="_blank">Java</a></li>
-          <li><a href="paginas/cursos/csharp/curso-csharp.html" target="_blank">C#</a></li>
-          <li><a href="paginas/cursos/python/curso-python.html" target="_blank">Python</a></li>
-          <li><a href="paginas/cursos/ruby/curso-ruby.html" target="_blank">Ruby</a></li>
+          <li><a href="paginas/cursos/java/curso-java.html">Java</a></li>
+          <li><a href="paginas/cursos/csharp/curso-csharp.html">C#</a></li>
+          <li><a href="paginas/cursos/python/curso-python.html">Python</a></li>
+          <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
     </div>
