--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -10,16 +10,19 @@
     <div id="container">
       <h1>:: Java ::</h1>
       <div>
+          <img src="../../../img/java.png" alt="Logo  da linguagem de programação Java" id="imgJava">
+
+            <p id = "histJava">Na atualidade, a maior parte dos aplicativos desenvolvidos para dispositivos móveis é
+              desenvolvido em Java, o que faz com que os programadores que dominam essa linguagem sejam profissionais bastante
+              procurados e valorizados no mercado de trabalho.</p>
+
         <h2>Lista de Cursos</h2>
         <ul>
-          <li><a href="../../../pagina-inicial.html" target="_blank">Início</a></li>
-          <li><a href="../csharp/curso-csharp.html" target="_blank">C#</a></li>
-          <li><a href="../python/curso-python.html" target="_blank">Python</a></li>
-          <li><a href="../ruby/curso-ruby.html" target="_blank">Ruby</a></li>
+          <li><a href="../../../pagina-inicial.html">Início</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
-      </div>
-      <div>
-        <img src="../../../img/java.jpeg" alt="Imagem de demonstração do slogan do Java" id="imgJava">
       </div>
     </div>
   </body>
