--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -10,17 +10,20 @@
     <div id="container">
       <h1>:: C# ::</h1>
       <div>
-        <h2>Lista de Cursos</h2>
+          <img src="../../../img/csharp.png" alt="Logo  da linguagem de programação C#" id="imgCsharp">
+
+          <p id = "histCSharp">C# é uma das linguagens mais importantes para programadores de computadores.
+            É um dos primeiros conteúdos que estes profissionais devem aprender para começar a escrever as suas próprias
+            linhas de comando. Por definição, a linguagem é voltada a programação orientada a objetos e foi desenvolvida para a Microsoft.</p>
+
+          <h2>Lista de Cursos</h2>
         <ul>
-          <li><a href="../java/curso-java.html" target="_blank">Java</a></li>
-          <li><a href="../../../pagina-inicial.html" target="_blank">Início</li>
-          <li><a href="../python/curso-python.html" target="_blank">Python</li>
-          <li><a href="../ruby/curso-ruby.html" target="_blank">Ruby</li>
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../../../pagina-inicial.html">Início</li>
+          <li><a href="../python/curso-python.html">Python</li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</li>
         </ul>
       </div>
-        <div>
-          <img src="../../../img/csharp.jpg" alt="Imagem de demonstração do slogan do C#" id="imgC#">
-        </div>
     </div>
   </body>
 </html>
