--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -10,16 +10,18 @@
     <div id="container">
       <h1>:: Python ::</h1>
       <div>
+          <img src="../../../img/python.png" alt="Logo  da linguagem de programação Python" id="imgPython">
+
+          <p id = "histPython">Python é uma linguagem de programação de alto nível, interpretada, de script, imperativa,
+            orientada a objetos, funcional, de tipagem dinâmica e forte</p>
+
         <h2>Lista de Cursos</h2>
         <ul>
-          <li><a href="../java/curso-java.html" target="_blank">Java</a></li>
-          <li><a href="../csharp/curso-csharp.html" target="_blank">C#</a></li>
-          <li><a href="../../../pagina-inicial.html" target="_blank">Início</a></li>
-          <li><a href="../ruby/curso-ruby.html" target="_blank">Ruby</a></li>
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../../../pagina-inicial.html">Início</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
-      </div>
-      <div>
-        <img src="../../../img/python.png" alt="Imagem de demonstração do slogan do Python" id="imgPython">
       </div>
     </div>
   </body>
