--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -10,16 +10,19 @@
     <div id="container">
       <h1>:: Ruby ::</h1>
       <div>
+          <img src="../../../img/ruby.png" alt="Logo  da linguagem de programação Ruby" id="imgRuby">
+
+          <p id = "histRuby">Ruby é uma linguagem de programação interpretada multiparadigma, de tipagem
+            dinâmica e forte, com gerenciamento de memória automático, originalmente planejada e desenvolvida no Japão em 1995,
+             por Yukihiro "Matz" Matsumoto, para ser usada como linguagem de script.</p>
+
         <h2>Lista de Cursos</h2>
         <ul>
-          <li><a href="../java/curso-java.html" target="_blank">Java</a></li>
-          <li><a href="../csharp/curso-csharp.html" target="_blank">C#</a></li>
-          <li><a href="../python/curso-python.html" target="_blank">Python</a></li>
-          <li><a href="../../../pagina-inicial.html" target="_blank">Início</a></li>
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../../../pagina-inicial.html">Início</a></li>
         </ul>
-      </div>
-      <div>
-        <img src="../../../img/ruby.png" alt="Imagem de demonstração do slogan da linguagem Ruby" id="imgRuby">
       </div>
     </div>
   </body>
