--- a/paginas/cursos/Csharp/curso-csharp.html
+++ b/paginas/cursos/Csharp/curso-csharp.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title> :: CSHARP</title>
-    <link rel="stylesheet" href="/css/style.css">
-
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>:: CSHARP</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <div id="container">
-      <h1>Página :: CSHARP :: </h1>
+      <h1>Página :: CSHARP ::</h1>
     </div>
-      <img src="/img/c-sharplogo.png" id="img-csharp">
     <div>
-    
+      <img src="/img/c-sharplogo.png" id="img-csharp" />
     </div>
   </body>
 </html>
