--- a/paginas/cursos/Java/curso-java.html
+++ b/paginas/cursos/Java/curso-java.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title> :: JAVA</title>
-    <link rel="stylesheet" href="/css/style.css">
-
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>:: JAVA</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <div id="container">
-      <h1>Página :: JAVA :: </h1>
+      <h1>Página :: JAVA ::</h1>
     </div>
-    <img src="/img/java.jpg">
 
-    <div >
-    
-      </ul>
+    <div>
+      <img src="/img/java.jpg" />
     </div>
   </body>
 </html>
