--- a/paginas/cursos/Ruby/curso-ruby.html
+++ b/paginas/cursos/Ruby/curso-ruby.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title> :: RUBY</title>
-    <link rel="stylesheet" href="/css/style.css">
-
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>:: RUBY</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <div id="container">
-      <h1>Página :: RUBY :: </h1>
+      <h1>Página :: RUBY ::</h1>
     </div>
 
-
     <div id="img-ruby">
-      
-      <img src="/img/rubylogo.jpg">
-
+      <img src="/img/rubylogo.jpg" class="img-ruby" />
     </div>
   </body>
 </html>
