--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewpoint" content="width=device-width,initial-scale=1">
     <title>::INICIO::</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div id="container">
@@ -11,9 +12,9 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li><a href="Paginas/Cursos/Java/curso-ruby.html">Java</a></li>
-          <li><a href="Paginas/Cursos/Csharp/curso-ruby.html">C#</a></li>
-          <li><a href="Paginas/Cursos/Python/curso-ruby.html">Python</a></li>
+          <li><a href="Paginas/Cursos/Java/curso-java.html">Java</a></li>
+          <li><a href="Paginas/Cursos/Csharp/curso-csharp.html">C#</a></li>
+          <li><a href="Paginas/Cursos/Python/curso-python.html">Python</a></li>
           <li><a href="Paginas/Cursos/Ruby/curso-ruby.html">Ruby</a></li>
           </ul>
       </div>
