Modificando caminhos das paginas

--- a/paginas/cursos/Python/curso-python.html
+++ b/paginas/cursos/Python/curso-python.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> :: PYTHON</title>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="../../../css/estilo.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         </ul>
     </div>
 
-    <img id="imgpython" src="/img/pythonlogo.png" alt="Logo da linguagem de programação Python">
+    <img id="imgpython" src="../../../img/pythonlogo.png" alt="Logo da linguagem de programação Python">
 
     <p>
         <h3>História </h3>
