--- a/paginas/cursos/Ruby/curso-ruby.html
+++ b/paginas/cursos/Ruby/curso-ruby.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> :: RUBY</title>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="../../../css/estilo.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     </div>
 
 
-    <img id="imgruby" src="/img/rubylogo.jpg" alt="Logo da linguagem de programação Ruby">
+    <img id="imgruby" src="../../../img/rubylogo.jpg" alt="Logo da linguagem de programação Ruby">
 
     <p>
         <h3>História da linguagem</h3>
