--- a/paginas/cursos/Csharp/curso-csharp.html
+++ b/paginas/cursos/Csharp/curso-csharp.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> :: C-SHARP</title>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="../../../css/estilo.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         </ul>
     </div>
 
-    <img id="imgcsharp" src="/img/c-sharplogo.png" alt="Logo da linguagem de programação Csharp.">
+    <img id="imgcsharp" src="../../../img/c-sharplogo.png" alt="Logo da linguagem de programação Csharp.">
 
     <p id="txtc#">
         <h3>História da linguagem</h3>
