--- a/paginas/cursos/Java/curso-java.html
+++ b/paginas/cursos/Java/curso-java.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> :: JAVA</title>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="../../../css/estilo.css">
 </head>
 
 <body>
@@ -17,14 +17,14 @@
         <h2> lista de cursos</h2>
         <hr>
         <ul>
-            <li> <a href="/pagina-inicial.html">inicio</a></li>
+            <li> <a href="../pagina-inicial.html">inicio</a></li>
             <li> <a href="../Csharp/curso-csharp.html">C#</a></li>
             <li> <a href="../Python/curso-python.html">Python</a></li>
             <li> <a href="../Ruby/curso-ruby.html">Ruby</a></li>
         </ul>
     </div>
 
-    <img id="imgjava" src="/img/javalogo.png" alt="Logo da linguagem de programação Java">
+    <img id="imgjava" src="../../../img/javalogo.png" alt="Logo da linguagem de programação Java">
 
     <p>
         <h3>História da linguagem</h3>
