--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -12,7 +12,7 @@
     </div>
 
     <div >
-      <h2>Lista de Cursos:</h2>
+      <h2>Lista de Cursos::</h2>
       <ul>
         <li> <a href="paginas/cursos/java/curso-java.html"> Java</a></li>
         <li> <a href="paginas/cursos/csharp/curso-csharp.html"> C# </a></li>
