--- a/paginas/cursos/Csharp/curso-csharp.html
+++ b/paginas/cursos/Csharp/curso-csharp.html
@@ -3,17 +3,25 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>:: CSHARP</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <title>C#</title>
+    <link rel="stylesheet" href="../../../css/style.css" />
   </head>
   <body>
     <div id="container">
-      <h1>Página :: CSHARP ::</h1>
+      <h1>Página - C#</h1>
     </div>
-    <div>
+    <div class="img-csharp">
       <img src="../../../img/c-sharplogo.png" id="img-csharp" />
     </div>
 
-    <a href="../../../pagina-inicial.html">Voltar</a>
+    <div class="texto">
+        <p id="texto">
+            C# é uma linguagem de programação, multiparadigma, de tipagem forte, desenvolvida pela Microsoft como parte da plataforma .NET. A sua sintaxe orientada a objetos foi baseada no C++ mas inclui muitas influências de outras linguagens de programação, como Object Pascal e, principalmente, Java. O código fonte é compilado para Common Intermediate Language (CIL) que é interpretado pela máquina virtual Common Language Runtime (CLR). C# é uma das linguagens projetadas para funcionar na Common Language Infrastructure da plataforma .NET Framework.
+        </p>
+    </div>
+
+    <div class="voltar">
+      <a href="../../../pagina-inicial.html" id="voltar">Voltar</a>
+    </div>
   </body>
 </html>
