--- a/paginas/cursos/Python/curso-python.html
+++ b/paginas/cursos/Python/curso-python.html
@@ -3,19 +3,29 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title> :: PYTHON</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>PYTHON</title>
+    <link rel="stylesheet" href="../../../css/style.css">
 
   </head>
   <body>
     <div id="container">
-      <h1>Página :: PYTHON :: </h1>
+      <h1>Página - PYTHON  </h1>
     </div>
 
-    <div id="img-python">
-      <img src="../../../img/pythonlogo.png">
+    <div class="img-python">
+      <img src="../../../img/pythonlogo.png" id="img-python">
     </div>
-    <a href="../../../pagina-inicial.html">Voltar</a>
+
+    <div class="texto">
+        <p id="texto">
+            É fácil ver que a linguagem tem facilidades incríveis para uso geral. A pergunta é: por que Python é a linguagem ideal para aplicações científicas? As respostas são muitas, mas podemos resumir algumas aqui. A primeira razão, e provavelmente a principal, é: Python é uma linguagem expressiva, em que é fácil traduzir o raciocínio em um algoritmo. Em aplicações científicas, o raciocínio é essencialmente complicado — essa é a natureza das ciências. 
+            É um problema adicional para o cientista ter que se preocupar com, além do assunto básico de sua pesquisa, a correção do programa em detalhes pouco relevantes: alocação de memória, gerenciamento de recursos, etc. Python faz isso tudo automaticamente de maneira muito eficiente, permitindo ao cientista se concentrar exclusivamente no problema sendo estudado.
+        </p>
+    </div>
+    
+    <div class="voltar">
+        <a href="../../../pagina-inicial.html" id="voltar">Voltar</a>
+      </div>
 
   </body>
 </html>
