Incluindo tag <figure> nas img

--- a/paginas/cursos/Csharp/curso-csharp.html
+++ b/paginas/cursos/Csharp/curso-csharp.html
@@ -10,9 +10,10 @@
     <div id="container">
       <h1>Página - C#</h1>
     </div>
-    <div class="img-csharp">
-      <img src="../../../img/c-sharplogo.png" id="img-csharp" />
-    </div>
+
+    <figure class="img-csharp">
+      <img src="../../../img/c-sharplogo.png" id="img-csharp" alt="Logo C#" />
+    </figure>
 
     <div class="texto">
         <p id="texto">
