--- a/paginas/cursos/Java/curso-java.html
+++ b/paginas/cursos/Java/curso-java.html
@@ -11,9 +11,9 @@
       <h1>Página - JAVA</h1>
     </div>
 
-    <div class="img-java">
-      <img src="../../../img/java.jpg" id="img-java" />
-    </div>
+    <figure class="img-java">
+      <img src="../../../img/java.jpg" id="img-java" alt="Logo Java"  />
+    </figure>
 
     <div class="texto">
         <p id="texto">
