--- a/paginas/cursos/Python/curso-python.html
+++ b/paginas/cursos/Python/curso-python.html
@@ -12,9 +12,9 @@
       <h1>Página - PYTHON  </h1>
     </div>
 
-    <div class="img-python">
-      <img src="../../../img/pythonlogo.png" id="img-python">
-    </div>
+    <figure class="img-python">
+      <img src="../../../img/pythonlogo.png" id="img-python" alt="Logo Python" >
+    </figure>
 
     <div class="texto">
         <p id="texto">
