--- a/paginas/cursos/Ruby/curso-ruby.html
+++ b/paginas/cursos/Ruby/curso-ruby.html
@@ -11,9 +11,9 @@
       <h1>Página - RUBY</h1>
     </div>
 
-    <div class="img-ruby">
-      <img src="../../../img/rubylogo.jpg" id="img-ruby" />
-    </div>
+    <figure class="img-ruby">
+      <img src="../../../img/rubylogo.jpg" id="img-ruby" alt="Logo Ruby"  />
+    </figure>
 
     <div class="texto">
         <p id="texto">
