Aula aquecimento CSS + HTML

--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>::C#::</title>
+    <link rel="stylesheet" href="../../../css/style.css" type="text/css">
   </head>
   <body>
     <div id="container">
@@ -11,10 +12,14 @@
       <h2>Lista de Cursos</h2>
       <ul>
         <li><a href="../java/curso-java.html">Java</a></li>
+        <li><a href="../../../pagina-inicial.html">INICIO</a></li>
         <li><a href="../python/curso-python.html">Python</a></li>
         <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
-        <li><a href="../../../pagina-inicial.html">INICIO</a></li>
       </ul>
     </div>
+    <figure>
+      <img id="imgCsharp" src="../../../img/c-sharp-logo.png" alt="Logo da linguagem de programação C#">
+      <figcaption>História do C#</figcaption>
+    </figure>
   </body>
 </html>
