--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>::INICIAL::</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
   </head>
   <body>
     <div id="container">
       <h1>Página::INICIAL::</h1>
+
       <h2>Lista de Cursos</h2>
       <ul>
         <li><a href="paginas/cursos/java/curso-java.html">Java</a></li>
@@ -16,5 +18,6 @@
         <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
       </ul>
     </div>
+
   </body>
 </html>
