--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -4,16 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>::JAVA::</title>
+    <link rel="stylesheet" href="../../../css/style.css" type="text/css">
   </head>
   <body>
     <div id="container">
       <h1>Página::JAVA::</h1>
       <h2>Lista de Cursos</h2>
       <ul>
+        <li><a href="../../../pagina-inicial.html">INICIO</a></li>
         <li><a href="../csharp/curso-csharp.html">C#</a></li>
         <li><a href="../python/curso-python.html">Python</a></li>
         <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
-        <li><a href="../../../pagina-inicial.html">INICIO</a></li>
       </ul>
     </div>
   </body>
