--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>::PYTHON::</title>
+    <link rel="stylesheet" href="../../../css/style.css" type="text/css">
   </head>
   <body>
     <div id="container">
@@ -12,8 +13,8 @@
       <ul>
         <li><a href="../java/curso-java.html">Java</a></li>
         <li><a href="../csharp/curso-csharp.html">C#</a></li>
-        <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         <li><a href="../../../pagina-inicial.html">INICIO</a></li>
+        <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
       </ul>
     </div>
   </body>
