--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>::RUBY::</title>
+    <link rel="stylesheet" href="../../../css/style.css" type="text/css">
   </head>
   <body>
     <div id="container">
