versao 1.2, barra de menu em andamento

--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -7,16 +7,19 @@
     <title>.: INICIO :.</title>
     <style>
       #container{
-        background-color: #1f222b;
+        background-color: #1F223B;
         margin-left: 15%;
-        margin-right: 15%;
-        font-family: 'Times New Roman'
-        color = #ffffff
+        margin-right: 15%;;
+        font-family: 'Times New Roman';
+        color = ghostwhite;
       }
       a{
         text-decoration: none;
-        color: #ffffff;
+        color: ghostwhite;
       }
+
+
+
     </style>
   </head>
   <body>
@@ -29,6 +32,7 @@
           <li><a  href='paginas/cursos/Python/curso-python.html'>Python</a></li>
           <li><a  href='paginas/cursos/Ruby/curso-ruby.html'>Ruby</a></li>
         </ul>
+        <hr>
       </div>
     </div>
   </body>
