--- a/paginas/cursos/CSharp/curso-csharp.html
+++ b/paginas/cursos/CSharp/curso-csharp.html
@@ -23,7 +23,9 @@
           <li><a  href='../Ruby/curso-ruby.html'>Ruby</a></li>
         </ul>
         <div class="img">
-            <hr><img id ="img_csharp" src="../../../img/img_csharp.png" alt="Logo da linguagem C#">
+            <figure>
+          <hr><img id ="img_csharp" src="../../../img/img_csharp.png" alt="Logo da linguagem C#">
+        </figure>
         </div>
         <div id="histcsharp">
           <p>C# é uma linguagem de programação, multiparadigma, de tipagem forte, desenvolvida pela Microsoft como parte da plataforma .NET. A sua sintaxe orientada a objetos foi baseada no C++ mas inclui muitas influências de outras linguagens de programação, como Object Pascal e, principalmente, Java.</p>
