--- a/paginas/cursos/Java/curso-java.html
+++ b/paginas/cursos/Java/curso-java.html
@@ -24,7 +24,12 @@
         </ul>
       </div>
       <div class="img">
-          <hr><img id = 'img_java' src="../../../img/img_java.png" alt="Logo da linguagem java">
+        <figure>
+          <img id = 'img_java' src="../../../img/img_java.png" alt="Logo da linguagem java">
+
+          <br>
+          <figurecaption id="historia">História do java</figurecaption>
+        </figure>
       </div>
       <div id="histjava">
         <p>Java é uma linguagem de programação orientada a objetos desenvolvida na década de 90 por uma equipe de programadores chefiada por James Gosling, na empresa Sun Microsystems.</p>
