--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -10,12 +10,16 @@
     <div id ="container">
       <h1>Página :: PYTHON ::</h1>
       <div>
-		<img id = "imgPython" src="../../../img/python.png" alt="Símbolo da linguagem de programação Python">
-			
+        <figure>
+            	<img id = "imgPython" src="../../../img/python.png" alt="Símbolo da linguagem de programação Python">
+            <figcaption>HISTÓRIA DO PYTHON</figcaption>
+        </figure>
+
+
 		<p id = "histPython">
 		Python é uma linguagem de programação de alto nível, interpretada, de script, imperativa, orientada a objetos, funcional, de tipagem dinâmica e forte.
-		Foi lançada por Guido van Rossum em 1991. Atualmente possui um modelo de desenvolvimento comunitário, aberto e gerenciado pela organização sem fins 
-		lucrativos Python Software Foundation. Apesar de várias partes da linguagem possuírem padrões e especificações formais, a linguagem como um todo não é 
+		Foi lançada por Guido van Rossum em 1991. Atualmente possui um modelo de desenvolvimento comunitário, aberto e gerenciado pela organização sem fins
+		lucrativos Python Software Foundation. Apesar de várias partes da linguagem possuírem padrões e especificações formais, a linguagem como um todo não é
 		formalmente especificada. O padrão de facto é a implementação CPython.
 		</p>
         <h2>Lista de Cursos:</h2>
