--- a/paginas/cursos/c-sharp/curso-csharp.html
+++ b/paginas/cursos/c-sharp/curso-csharp.html
@@ -10,15 +10,18 @@
     <div id ="container">
       <h1>Página :: C# ::</h1>
       <div>
-		<img id = "imgCSharp" src="../../../img/csharp.jpg" alt="Símbolo da linguagem de programação C#">
-		
+        <figure>
+            <img id = "imgCSharp" src="../../../img/csharp.jpg" alt="Símbolo da linguagem de programação C#">
+            <figcaption>HISTÓRIA DO C#</figcaption>
+        </figure>
+
 		<p id = "histCSharp">
-		C# é uma linguagem de programação, multiparadigma, de tipagem forte, desenvolvida pela Microsoft como parte da plataforma .NET. A sua sintaxe orientada 
-		a objetos foi baseada no C++ mas inclui muitas influências de outras linguagens de programação, como Object Pascal e, principalmente, Java. O código 
-		fonte é compilado para Common Intermediate Language (CIL) que é interpretado pela máquina virtual Common Language Runtime (CLR). C# é uma das linguagens 
+		C# é uma linguagem de programação, multiparadigma, de tipagem forte, desenvolvida pela Microsoft como parte da plataforma .NET. A sua sintaxe orientada
+		a objetos foi baseada no C++ mas inclui muitas influências de outras linguagens de programação, como Object Pascal e, principalmente, Java. O código
+		fonte é compilado para Common Intermediate Language (CIL) que é interpretado pela máquina virtual Common Language Runtime (CLR). C# é uma das linguagens
 		projetadas para funcionar na Common Language Infrastructure da plataforma .NET Framework.
 		</p>
-        
+
 		<h2>Lista de Cursos:</h2>
         <ul>
           <li><a href="../java/curso-java.html">Java</a></li>
@@ -27,6 +30,8 @@
           <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
+
+
     </div>
   </body>
 </html>
