--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -10,14 +10,17 @@
     <div id ="container">
       <h1>Página :: JAVA ::</h1>
       <div>
-		
-		<img id = "imgJava" src="../../../img/java.png" alt="Símbolo da linguagem de programação Java">
-		
+        <figure>
+            	<img id = "imgJava" src="../../../img/java.png" alt="Símbolo da linguagem de programação Java">
+            <figcaption>HISTÓRIA DO JAVA</figcaption>
+        </figure>
+
+
 		<p id = "histJava">
-		
+
 		Java é o nome dado ao ambiente computacional, ou plataforma, criada pela empresa estadunidense Sun Microsystems, e vendida para a Oracle depois de alguns anos.
-		A plataforma permite desenvolver programas utilizando a linguagem de programação Java. Uma grande vantagem da plataforma é a de não estar presa a um 
-		único sistema operacional ou hardware, pois seus programas rodam através de uma máquina virtual que pode ser emulada em qualquer sistema que suporte a 
+		A plataforma permite desenvolver programas utilizando a linguagem de programação Java. Uma grande vantagem da plataforma é a de não estar presa a um
+		único sistema operacional ou hardware, pois seus programas rodam através de uma máquina virtual que pode ser emulada em qualquer sistema que suporte a
 		linguagem C++
 		</p>
         <h2>Lista de Cursos:</h2>
