--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -10,14 +10,17 @@
     <div id ="container">
       <h1>Página :: RUBY ::</h1>
       <div>
-	  
-		<img id = "imgRuby" src="../../../img/ruby.png" alt="Símbolo da linguagem de programação Ruby">
-		
+        <figure>
+            <img id = "imgRuby" src="../../../img/ruby.png" alt="Símbolo da linguagem de programação Ruby">
+            <figcaption>HISTÓRIA DO RUBY</figcaption>
+        </figure>
+
+
 		<p id = "histRuby">
-		Ruby é uma linguagem de programação interpretada multiparadigma, de tipagem dinâmica e forte, com gerenciamento de memória automático, originalmente 
-		planejada e desenvolvida no Japão em 1995, por Yukihiro "Matz" Matsumoto, para ser usada como linguagem de script. Matz queria uma linguagem de script 
-		que fosse mais poderosa do que Perl, e mais orientada a objetos do que Python.Ruby suporta programação funcional, orientada a objetos, imperativa e 
-		reflexiva. Foi inspirada principalmente por Python, Perl, Smalltalk, Eiffel, Ada e Lisp, sendo muito similar em vários aspectos a Python. Ruby está 
+		Ruby é uma linguagem de programação interpretada multiparadigma, de tipagem dinâmica e forte, com gerenciamento de memória automático, originalmente
+		planejada e desenvolvida no Japão em 1995, por Yukihiro "Matz" Matsumoto, para ser usada como linguagem de script. Matz queria uma linguagem de script
+		que fosse mais poderosa do que Perl, e mais orientada a objetos do que Python.Ruby suporta programação funcional, orientada a objetos, imperativa e
+		reflexiva. Foi inspirada principalmente por Python, Perl, Smalltalk, Eiffel, Ada e Lisp, sendo muito similar em vários aspectos a Python. Ruby está
 		entre as 10 linguagens mais populares, de acordo com uma pesquisa conduzida pela RedMonk.
 		</p>
         <h2>Lista de Cursos:</h2>
