Atualização da página inicial e adição de arquivo de estilo.

--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>:: INICIO ::</title>
+    <link rel="stylesheet" href="css/estilo.css" type="text/css">
   </head>
   <body>
     <div id="container">
       <h1>Página :: INICIAL ::</h1>
+
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
@@ -17,6 +19,7 @@
           <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
+
     </div>
   </body>
 </html>
