--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -4,19 +4,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>:: C# ::</title>
+    <link rel="stylesheet" href="../../../css/estilo.css" type="text/css">
   </head>
   <body>
     <div id="container">
       <h1>Página :: C# ::</h1>
+
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>INICIO</li>
-          <li>Python</li>
-          <li>Ruby</li>
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
+
+      <figure>
+        <img id="imgJava" src="../../../img/img_01-logo-java.jpg" alt="Logo da linguagem de programação JAVA">
+        <figcaption>HISTÓRIA DO JAVA</figcaption>
+      </figure>
+
     </div>
   </body>
 </html>
