--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>:: JAVA ::</title>
+    <link rel="stylesheet" href="../../../css/estilo.css" type="text/css">
   </head>
   <body>
     <div id="container">
